@@ -94,25 +94,25 @@ pixmapdir = $(datadir)/pixmaps
 pixmap_DATA = gaim.xpm
 	
 if GNOMEAPPLET
-gnomesysconf = `@GNOME_CONFIG@ --sysconfdir`
+#gnomesysconf = `@GNOME_CONFIG@ --sysconfdir`
 gnomedata    = `@GNOME_CONFIG@ --datadir`
 gaimpixmapdir = $(gnomedata)/pixmaps
 gaimpixmap_DATA = gaim.xpm
 gaimgnomedir = $(gnomedata)/pixmaps/gaim/gnome
-gaimgnome_DATA = 
-gaimgnomepixmapsdir = $(gnomedata)/pixmaps/gaim
-gaimgnomepixmaps_DATA = gnome/penguin-online.png gnome/penguin-offline.png \
-	gnome/penguin-connect.png gnome/devil-offline.png \
-	gnome/devil-connect.png gnome/devil-online.png
+#gaimgnome_DATA = 
+#gaimgnomepixmapsdir = $(gnomedata)/pixmaps/gaim
+#gaimgnomepixmaps_DATA = gnome/penguin-online.png gnome/penguin-offline.png \
+#	gnome/penguin-connect.png gnome/devil-offline.png \
+#	gnome/devil-connect.png gnome/devil-online.png
 endif
 
 if DISTRIB
 pixmapdistribdir = $(datadir)/pixmaps
 pixmapdistrib_DATA = gaim.xpm
-gnomedistribdir = $(datadir)/pixmaps/gaim/gnome
-gnomedistrib_DATA = 
-gnomepixmapdistribdir = $(datadir)/pixmaps/gaim
-gnomepixmapdistrib_DATA = gnome/penguin-online.png gnome/penguin-offline.png \
-	gnome/penguin-connect.png gnome/devil-offline.png \
-	gnome/devil-connect.png gnome/devil-online.png
+#gnomedistribdir = $(datadir)/pixmaps/gaim/gnome
+#gnomedistrib_DATA = 
+#gnomepixmapdistribdir = $(datadir)/pixmaps/gaim
+#gnomepixmapdistrib_DATA = gnome/penguin-online.png gnome/penguin-offline.png \
+#	gnome/penguin-connect.png gnome/devil-offline.png \
+#	gnome/devil-connect.png gnome/devil-online.png
 endif
