@@ -61,6 +61,10 @@ enum gaim_user_states {
 #define GAIM_GNOME_PENGUIN_CONNECT "gaim/gnome/penguin-connect.png"
 #define GAIM_GNOME_PENGUIN_ONLINE "gaim/gnome/penguin-online.png"
 
+#define GAIM_GNOME_OFFLINE_ICON "apple-red.png"
+#define GAIM_GNOME_CONNECT_ICON "gnome-battery.png"
+#define GAIM_GNOME_ONLINE_ICON "apple-green.png"
+
 extern gint init_applet_mgr();
 extern void applet_do_signon(AppletWidget *, gpointer);
 extern void make_buddy();
